--- a/app.quality.frontend/package.json
+++ b/app.quality.frontend/package.json
@@ -16,6 +16,9 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
+    "auto-prefixer": "^0.4.2",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.6",
     "typescript": "^4.6.4",
     "vite": "^3.0.0"
   }
