--- a/app.quality.frontend/package.json
+++ b/app.quality.frontend/package.json
@@ -13,10 +13,12 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^1.1.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
     "auto-prefixer": "^0.4.2",
+    "eslint": "^8.20.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.6",
     "typescript": "^4.6.4",
