--- a/app.quality.frontend/package.json
+++ b/app.quality.frontend/package.json
@@ -9,15 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.1.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
-    "auto-prefixer": "^0.4.2",
+    "autoprefixer": "^10.4.8",
     "eslint": "^8.20.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.6",
